<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" android:id="@+id/nav1_menu_primary">
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_one"
            android:title="@string/about"
            android:checkable="true"/>
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_one"
            android:checkable="true"
            android:title="@string/home" />
    </group>
    <group android:checkableBehavior="single" android:id="@+id/sort">
        <item
            android:id="@+id/chapter"
            android:checkable="true"
            android:title="@string/chapter"/>

        <item
            android:id="@+id/year"
            android:checkable="true"
            android:title="@string/year"/>
    </group>
    <group android:checkableBehavior="single" android:id="@+id/archive">
        <item
            android:id="@+id/saved"
            android:checkable="true"
            android:title="@string/saved"/>

        <item
            android:id="@+id/imp"
            android:checkable="true"
            android:title="@string/imp"/>
    </group>
    <group android:checkableBehavior="single" android:id="@+id/nav2_menu_primary">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_one"
            android:title="@string/settings"
            android:checkable="true"/>
        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_one"
            android:title="@string/help"
            android:checkable="true"/>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_one"
            android:title="@string/logout"
            android:checkable="true"/>
    </group>
</menu>